--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
-                        <li class="nav__item"><a href="education.html" class="nav__link">Education</a></li>
-                        <li class="nav__item"><a href="projects.html" class="nav__link">Projects</a></li>
-                        <li class="nav__item"><a href="skills.html" class="nav__link">Skills</a></li>
-                        <li class="nav__item"><a href="certifications.html" class="nav__link">Certifications</a></li>
-                        <li class="nav__item"><a href="contact.html" class="nav__link">Contact</a></li>
+                        <li class="nav__item"><a href="/index.html" class="nav__link">Home</a></li>
+                        <li class="nav__item"><a href="/education.html" class="nav__link">Education</a></li>
+                        <li class="nav__item"><a href="/projects.html" class="nav__link">Projects</a></li>
+                        <li class="nav__item"><a href="/skills.html" class="nav__link">Skills</a></li>
+                        <li class="nav__item"><a href="/certifications.html" class="nav__link">Certifications</a></li>
+                        <li class="nav__item"><a href="/contact.html" class="nav__link">Contact</a></li>
                     </ul>
                 </div>
 
