--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/responsive/styles.css">
+        <link rel="stylesheet" href="responsive/styles.css">
         <title>Landing page responsive portfolio</title>
     </head>
     <body>
@@ -22,7 +22,7 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
-                        <li class="nav__item"><a href="\education.html" class="nav__link">Education</a></li>
+                        <li class="nav__item"><a href="education.html" class="nav__link">Education</a></li>
                         <li class="nav__item"><a href="projects.html" class="nav__link">Projects</a></li>
                         <li class="nav__item"><a href="skills.html" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="certifications.html" class="nav__link">Certifications</a></li>
@@ -45,12 +45,12 @@
                     <span class="home__skill anime-text">Btech,4<sup>th</span></sup> year</span>
                     
                     <div>
-                        <a href="/Vishwa Gaurav Shukla.pdf" class="home__button anime-text">DOWNLOAD CV</a>
+                        <a href="Vishwa Gaurav Shukla.pdf" class="home__button anime-text">DOWNLOAD CV</a>
                     </div>
                 </div>
 
                 <div class="home__img">
-                    <img src="/IMG_20210308_111620_782.jpg" alt="">
+                    <img src="IMG_20210308_111620_782.jpg" alt="">
                 </div>
                 
                 <!-- <div class="home__social>
