--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                 <p><li>My Phone Number -> 8887924395</li><li>Email-id -> vgsofficial070@gmail.com</li>
                 <li>Address ->
                     Aishbagh Railway Station,Lucknow,Uttar Pradesh,India Pincode:226004</li>
-                <li class="nav__item"><a href="/index.html" class="nav__link">LinkedIn(Click to Visit the page)</a></li>
+                <li><a href="/index.html" class="nav__link">LinkedIn(Click to Visit the page)</a></li>
             </div>
         </div>
     </main>
