--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <span class="home__skill anime-text">Btech,4<sup>th</span></sup> year</span>
                     
                     <div>
-                        <a href="Vishwa Gaurav Shukla (2).pdf" class="home__button anime-text">DOWNLOAD CV</a>
+                        <a href="https://drive.google.com/file/d/1MMY9_WfKqdvCTRQweiojrO3fhuMUQtDB/view?usp=sharing" class="home__button anime-text">DOWNLOAD CV</a>
                     </div>
                 </div>
 
